# OmniQuant

./: README.md  StartApp.sh  pyproject.toml
omniquant/: __init__.py  calibrate.py
omniquant/io/: dataset.py
omniquant/numeric/: calibrate.py  quantify.py
omniquant/test-data/: test_data.csv
omniquant/ui/: Import_&_parametrise.py  app_entry.py  page_1.py  page_2.py
tests/: conftest.py  test_calibrate.py
