[tool.poetry]
name = "omniquant"
version = "0.1.0"
description = ""
authors = ["llegregam <legregam@insa-toulouse.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
statsmodels = "^0.14.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
