[tool.poetry]
name = "omniquant"
version = "0.1.0"
description = ""
authors = ["llegregam <legregam@insa-toulouse.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
plotly = "^5.18.0"
streamlit = "^1.32.2"
sess-i = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
